[project]
name = "langchain-agent"
version = "0.1.0"
description = "Langchain agents and workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.3.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.69",
    "ollama>=0.4.7",
]
